--- a/ColorPicker.css
+++ b/ColorPicker.css
@@ -4,5 +4,8 @@ body{
 .square{
     width: 30%;
     background: purple;
-    margin: 1.66%;
+    margin-top: 1.66%;
+    margin-right: 1.66%;
+    margin-left: 1.66%;
+    margin-bottom: 1.66%;
 }
