--- a/ColorPicker.css
+++ b/ColorPicker.css
@@ -4,8 +4,17 @@ body{
 .square{
     width: 30%;
     background: purple;
+    padding-bottom: 30%;
+    float: left;
     margin-top: 1.66%;
     margin-right: 1.66%;
     margin-left: 1.66%;
     margin-bottom: 1.66%;
+}
+#container{
+    margin-top: 0;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 0;
+    max-width: 600px;
 }
